<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"


    android:scrollbarFadeDuration="0"
    >
<!--
    android:scrollbarSize="10dip"
-->
    <!-- android:scrollbarThumbVertical="@color/red"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/lightgrey"

        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:textColor="@color/black"
            android:background="@drawable/box"
            android:text="@string/scrolltext"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="@color/black"
            android:background="@drawable/box"
            android:src="@drawable/phone"
            android:text="@string/scrolltext3"
            android:textSize="18sp" />

        <TextView
        android:id="@+id/text2"
        android:textSize="18sp"
            android:layout_marginTop="2dp"
        android:layout_width="wrap_content"
        android:background="@drawable/box"
            android:textColor="@color/black"
        android:text="@string/scrolltext4"
        android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text5"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:background="@drawable/box"
            android:text="@string/scrolltext6"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="1sp"
            android:src="@drawable/electronocewaste"
            />
        <TextView
            android:id="@+id/text4"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:background="@drawable/box"
            android:text="@string/scrolltext5"
            android:layout_height="wrap_content" />



      <!--  <Button
            android:id="@+id/mapbutton"
            android:layout_width="112dp"
            android:layout_height="229dp"
            android:backgroundTint="#80ADAD"
            android:text="MAP" />-->

        </LinearLayout>






</ScrollView>